--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="index.html">
+    <meta property="og:title" content="Kanye West">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="img/yeezy.png">
+    <meta property="og:description" content="2010년 부터 현재까지 미국 최고의 패셔니스타">
     <title>칸예웨스트</title>
     <link rel="stylesheet" href="index.css">
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/favicon">
+    <link rel="icon" href="img/favicon.ico" type="image/favicon">
+
 </head>
+
 <body>
     <a href="index.html">  
         <div class="bg0"><img src="img/logo1.png" alt="logo"></div>
