--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <meta property="og:url" content="index.html">
     <meta property="og:title" content="Kanye West">
-    <meta property="og:type" content="https://flds6339.github.io/202306055/">
-    <meta property="og:image" content="img/yeezy">
+    <meta property="og:type" content="websit">
+    <meta property="og:image" content="https://flds6339.github.io/202306055/img.png">
     <meta property="og:description" content="2010년 부터 현재까지 미국 최고의 패셔니스타">
 
-    <link rel="shortcut icon" href="img/fabicon.png" type="image/x-icon">
-    <link rel="icon" href="img/fabicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/fabicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/fabicon.ico" type="image/x-icon">
 
 </head>
 
