--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    
     <title>칸예웨스트</title>
     <link rel="stylesheet" href="index.css">
 
-    <meta property="og:url" content="index.html">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+    <meta property="og:url" content="https://flds6339.github.io/202306055/index.html">
     <meta property="og:title" content="Kanye West">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://flds6339.github.io/202306055/img.png">
-    <meta property="og:description" content="2010년 부터 현재까지 미국 최고의 패셔니스타">
+    <meta property="og:description" content="2010년부터 현재까지 미국 최고의 패셔니스타">
 
-    <link rel="shortcut icon" href="img/fabicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/fabicon.ico" type="image/x-icon">
 
 </head>
 
