--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-    <meta property="og:url" content="https://flds6339.github.io/202306055/index.html">
+    <meta property="og:url" content="https://flds6339.github.io/202306055/">
     <meta property="og:title" content="Kanye West">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://flds6339.github.io/202306055/img.png">
+    <meta property="og:image" content="https://flds6339.github.io/202306055/img/logo2.png">
     <meta property="og:description" content="2010년부터 현재까지 미국 최고의 패셔니스타">
-
-
 </head>
 
 <body>
